<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/indtast_adresse"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_margin="24dp"
        />

    <EditText
        android:id="@+id/editTextAddress"
        android:ems="10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/vej_navn_nummer"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextPostalCode"
            android:ems="4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/post_nummer"/>
        <EditText
            android:id="@+id/editTextCity"
            android:ems="6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/by"/>

    </LinearLayout>


</LinearLayout>