<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:text="@string/ny_email"
        android:textColor="@color/white"
        android:textSize="20sp" />
    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="13"
        android:inputType="textEmailAddress"
        android:hint="@string/indtast_ny_email"
        />

    <EditText
        android:id="@+id/editTextEmail2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="13"
        android:inputType="textEmailAddress"
        android:hint="@string/gentag_ny_email"
        />

</LinearLayout>