<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ny adgangskode"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_margin="24dp"
        />
    <EditText
        android:id="@+id/editTextOldPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="13"
        android:inputType="textPassword"
        android:hint="@string/indtast_gammel_adgangskode"
        />

    <EditText
        android:id="@+id/editTextNewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="13"
        android:inputType="textPassword"
        android:hint="@string/indtast_ny_adgangskode"
        />

    <EditText
        android:id="@+id/editTextNewPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="13"
        android:inputType="textPassword"
        android:hint="@string/gentag_ny_adgangskode"
        />
</LinearLayout>